# ru-legal

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  MCP-STATUS.md  Makefile  README.md  ROADMAP.md  SECURITY.md
.github/: FUNDING.yml
examples/: 01-vendor-dd.md  02-termination-review.md  03-ddu-review.md  README.md
mcps/cbr/: README.md  pyproject.toml
mcps/cbr/src/cbr_mcp/: __init__.py  server.py
mcps/efrsb/: README.md  pyproject.toml
mcps/efrsb/src/efrsb_mcp/: server.py
mcps/efrsb/tests/: test_server.py
mcps/egrul/: README.md  pyproject.toml
mcps/egrul/src/egrul_mcp/: __init__.py  server.py  validators.py
mcps/egrul/tests/: test_server.py  test_validators.py
mcps/kad/: README.md  pyproject.toml
mcps/kad/src/kad_mcp/: server.py
mcps/kad/tests/: test_server.py
mcps/pravo/: README.md  pyproject.toml
mcps/pravo/src/pravo_mcp/: __init__.py  server.py
mcps/pravo/tests/: test_server.py
mcps/rospatent/: README.md  pyproject.toml
mcps/rospatent/src/rospatent_mcp/: server.py
mcps/rospatent/tests/: test_server.py
mcps/rosreestr/: README.md  pyproject.toml
mcps/rosreestr/src/rosreestr_mcp/: server.py
mcps/rosreestr/tests/: test_server.py
mcps/ru-legal-aggregator/: README.md  pyproject.toml
mcps/ru-legal-aggregator/src/ru_legal_mcp/: server.py
mcps/ru-legal-aggregator/src/ru_legal_mcp/registry/: skills.py
mcps/ru-legal-aggregator/src/ru_legal_mcp/router/: llm.py  router.py
mcps/ru-legal-aggregator/tests/: test_registry.py
mcps/zakupki/: README.md  pyproject.toml
mcps/zakupki/src/zakupki_mcp/: server.py
mcps/zakupki/tests/: test_server.py
packs/: registry.json
packs/_template/: SKILL.md
packs/administrative-law/: PROFILE.md  pack.yaml
packs/administrative-law/skills/administrative-appeal/: SKILL.md
packs/administrative-law/skills/cold-start-interview/: SKILL.md
packs/administrative-law/skills/customize/: SKILL.md
packs/administrative-law/skills/fines-calculator/: SKILL.md
packs/administrative-law/skills/inspection-defense/: SKILL.md
packs/administrative-law/skills/inspection-preparation/: SKILL.md
packs/administrative-law/skills/koap-violation-response/: SKILL.md
packs/administrative-law/skills/statute-of-limitations-check/: SKILL.md
packs/ai-governance/: PROFILE.md  pack.yaml
packs/ai-governance/skills/ai-inventory/: SKILL.md
packs/ai-governance/skills/aia-generation/: SKILL.md
packs/ai-governance/skills/cold-start-interview/: SKILL.md
packs/ai-governance/skills/customize/: SKILL.md
packs/ai-governance/skills/deployment-review/: SKILL.md
packs/ai-governance/skills/policy-starter/: SKILL.md
packs/ai-governance/skills/training-data-review/: SKILL.md
packs/ai-governance/skills/use-case-triage/: SKILL.md
packs/ai-governance/skills/user-disclosure-check/: SKILL.md
packs/ai-governance/skills/vendor-ai-review/: SKILL.md
packs/compliance-aml/: PROFILE.md  pack.yaml
packs/compliance-aml/skills/beneficial-owner-check/: SKILL.md
packs/compliance-aml/skills/cold-start-interview/: SKILL.md
packs/compliance-aml/skills/customize/: SKILL.md
packs/compliance-aml/skills/kyc-procedure/: SKILL.md
packs/compliance-aml/skills/pep-screening/: SKILL.md
packs/compliance-aml/skills/policy-115fz/: SKILL.md
packs/compliance-aml/skills/sanctions-screening/: SKILL.md
packs/compliance-aml/skills/sar-submission/: SKILL.md
packs/compliance-aml/skills/transaction-monitoring/: SKILL.md
packs/consumer-product/: PROFILE.md  pack.yaml
packs/consumer-product/skills/cold-start-interview/: SKILL.md
packs/consumer-product/skills/customize/: SKILL.md
packs/consumer-product/skills/launch-review/: SKILL.md
packs/consumer-product/skills/return-policy-review/: SKILL.md
packs/consumer-product/skills/terms-review/: SKILL.md
packs/contract-law/: PROFILE.md  README.md  pack.yaml
packs/contract-law/.claude-plugin/: plugin.json
packs/contract-law/agents/: contract-renewal-watcher.md
packs/contract-law/skills/amendment-history/: SKILL.md
packs/contract-law/skills/cold-start-interview/: SKILL.md
packs/contract-law/skills/contract-review/: SKILL.md
packs/contract-law/skills/customize/: SKILL.md
packs/contract-law/skills/escalation-flagger/: SKILL.md
packs/contract-law/skills/nda-draft/: SKILL.md
packs/contract-law/skills/nda-review/: SKILL.md
packs/contract-law/skills/renewal-tracker/: SKILL.md
packs/contract-law/skills/review/: SKILL.md
packs/contract-law/skills/saas-msa-review/: SKILL.md
packs/contract-law/skills/stakeholder-summary/: SKILL.md
packs/contract-law/skills/vendor-agreement-review/: SKILL.md
packs/corporate-law/: PROFILE.md  pack.yaml
packs/corporate-law/skills/board-minutes/: SKILL.md
packs/corporate-law/skills/closing-checklist/: SKILL.md
packs/corporate-law/skills/cold-start-interview/: SKILL.md
packs/corporate-law/skills/corporate-meeting-prep/: SKILL.md
packs/corporate-law/skills/customize/: SKILL.md
packs/corporate-law/skills/deal-team-summary/: SKILL.md
packs/corporate-law/skills/diligence-issue-extraction/: SKILL.md
packs/corporate-law/skills/entity-compliance/: SKILL.md
packs/corporate-law/skills/integration-management/: SKILL.md
packs/corporate-law/skills/material-contract-schedule/: SKILL.md
packs/corporate-law/skills/share-deal-review/: SKILL.md
packs/corporate-law/skills/tabular-review/: SKILL.md
packs/corporate-law/skills/written-consent/: SKILL.md
packs/data-protection/: PROFILE.md  pack.yaml
packs/data-protection/skills/cold-start-interview/: SKILL.md
packs/ip-law/: PROFILE.md  pack.yaml
packs/labor-law/: PROFILE.md  pack.yaml
packs/litigation/: PROFILE.md  pack.yaml
packs/process-documents/: PROFILE.md
packs/public-procurement/: PROFILE.md  pack.yaml
packs/real-estate/: PROFILE.md  pack.yaml
packs/regulatory-monitor/: PROFILE.md  pack.yaml
packs/tax-law/: PROFILE.md  pack.yaml
references/: company-profile-template.md
references/constants/: 2026.yaml  README.md
scripts/: add_disclaimer.py  add_legislative_update_field.py  audit_staleness.py  smoke_test_mcps.py
(+89 files in other folders)
