[project]
name = "cbr-mcp"
version = "0.1.0"
description = "MCP server для ЦБ РФ — банковский справочник, отозванные лицензии, курсы валют, ключевая ставка"
authors = [
    { name = "Alexander Kozlov", email = "als.kozlov@yandex.ru" },
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.2.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "lxml>=5.0",  # для XML/SOAP responses
    "python-dateutil>=2.8",
]

[project.scripts]
cbr-mcp = "cbr_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cbr_mcp"]
