[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kad-mcp"
version = "0.1.0"
description = "MCP server для kad.arbitr.ru — Картотека арбитражных дел. Поиск дел по номеру / стороне / суду, получение карточки дела, история судебных актов."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "Claude for Russian Law contributors" }]
keywords = ["mcp", "claude", "legal", "russian-law", "kad-arbitr", "arbitration", "litigation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]
dependencies = [
    "fastmcp>=3.2,<4",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
]

[project.scripts]
kad-mcp = "kad_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kad_mcp"]

[tool.hatch.build.targets.sdist]
include = ["src/", "tests/", "README.md", "LICENSE"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "RET", "SIM"]
ignore = ["E501"]
