[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rosreestr-mcp"
version = "0.1.0"
description = "MCP server для Росреестр / ЕГРН — поиск объектов недвижимости, кадастровая информация, выписки."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "Claude for Russian Law contributors" }]
keywords = ["mcp", "claude", "legal", "russian-law", "rosreestr", "egrn", "cadastre", "real-estate"]
dependencies = ["fastmcp>=3.2,<4", "httpx>=0.27", "pydantic>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21", "ruff>=0.5"]

[project.scripts]
rosreestr-mcp = "rosreestr_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rosreestr_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "RET", "SIM"]
ignore = ["E501"]
