[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ru-legal-mcp"
version = "0.1.0"
description = "Unified MCP server для ru-legal — все 33 tools + 145 skills РФ legal AI в одном пакете. Подключи в Claude Code / Cursor / любой MCP-клиент."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "ru-legal contributors" }]
keywords = ["mcp", "claude", "legal", "russian-law", "skills", "legaltech"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business",
]
dependencies = [
    "fastmcp>=3.2,<4",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
router = [
    # для Strategy C — LLM-based skill routing
    "openai>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
]

[project.scripts]
ru-legal-mcp = "ru_legal_mcp.server:main"
ru-legal = "ru_legal_mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ru_legal_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "RET", "SIM"]
ignore = ["E501"]
