[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zakupki-mcp"
version = "0.1.0"
description = "MCP server для ЕИС закупки zakupki.gov.ru — поиск закупок 44-ФЗ / 223-ФЗ, проверка по РНП, мониторинг тендеров заказчика."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "Claude for Russian Law contributors" }]
keywords = ["mcp", "claude", "legal", "russian-law", "zakupki", "fz-44", "fz-223", "rnp", "procurement"]
dependencies = ["fastmcp>=3.2,<4", "httpx>=0.27", "pydantic>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21", "ruff>=0.5"]

[project.scripts]
zakupki-mcp = "zakupki_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/zakupki_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "RET", "SIM"]
ignore = ["E501"]
